pyquest/ql/test/parsing/valid/test001.ql
// Form with question type boolean
form testForm {
  "Question?"
    var: boolean
}