pyquest/ql/test/parsing/invalid/test005.ql
// Question label without quotation marks
form testForm {
    question
    var : cows
}